Transferring to another computer

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
        <a href = "about.html" class = "nav-link"> about </a>
     </div>
 </header>
+<main>
+    <img src = ""
 
+</main>
 </html>
