Uploaded images and finished positioning the mouse image, still need to work on the mcdonald image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </div>
 </header>
 <main>
-    <img src = ""
-
+    <img src = "1 mouse in the grass.png" class = "mouseingrass">
+    <img src = "2 mcdonalds mockups.png" class = "mcdonaldsmockups">
+ 
 </main>
 </html>
