Finished the hey I'm Evelyn heading

--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
        <a href = "about.html" class = "nav-link"> about </a>
     </div>
 </header>
-<main>
+<body>
+    <main>
+        <h2>
+            hey! i'm <span class = "highlight">Evelyn</span>, an illustrator<br>and graphic designer
+        </h2>
     <img src = "1 mouse in the grass.png" class = "mouseingrass">
     <img src = "2 mcdonalds mockups.png" class = "mcdonaldsmockups">
  
-</main>
+    </main>
+</body>
 </html>
