Completely remodeled the entire top section, Added the "Featured" heading and adjusted Mcdonalds app image

--- a/index.html
+++ b/index.html
@@ -14,24 +14,32 @@
 </header>
 <body>
     <main>
-        <h2>
-            hey! i'm <span class = "highlight">Evelyn</span>, an illustrator<br>and graphic designer
-        </h2>
-        <h1> welcome to my
-            <div class = "portfolio">
-            <span class = "letter-p"> P </span>
-            <span class = "letter-o"> o </span>
-            <span class = "letter-r"> r </span>
-            <span class = "letter-t"> t </span>
-            <span class = "letter-f"> f </span>
-            <span class = "letter-o2"> o </span>
-            <span class = "letter-l"> l </span>
-            <span class = "letter-i"> i </span>
-            <span class = "letter-o3"> o </span>
-            </div>
-        </h1>
-    <img src = "1 mouse in the grass.png" class = "mouseingrass">
-    <img src = "2 mcdonalds mockups.png" class = "mcdonaldsmockups">
+        <section class = "top-section">
+            <img src = "1 mouse in the grass.png" class = "mouseingrass">
+            <h2>
+                hey! i'm <span class = "highlight">Evelyn</span>, an illustrator<br>and graphic designer
+            </h2>
+            <h1 class = "welcome"> welcome to my
+                <span class = "portfolio">
+                <span class = "letter-p"> P </span>
+                <span class = "letter-o"> o </span>
+                <span class = "letter-r"> r </span>
+                <span class = "letter-t"> t </span>
+                <span class = "letter-f"> f </span>
+                <span class = "letter-o2"> o </span>
+                <span class = "letter-l"> l </span>
+                <span class = "letter-i"> i </span>
+                <span class = "letter-o3"> o </span>
+                </span>
+            </h1>
+        </section>
+        
+        <section class = "featured">
+            <h1 class = "featured-text"> Featured </h1>
+            <img src = "2 mcdonalds mockups.png" class = "mcdonalds">
+
+        </section>
+    
  
     </main>
 </body>
