Made minor changes, turning mcdonalds image into a button

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
         
         <section class = "featured">
             <h1 class = "featured-text"> Featured </h1>
+            <a href = "project1.html">
             <img src = "2 mcdonalds mockups.png" class = "mcdonalds">
-
+            </a>
+            <img src = "3 hivespace mockups.png" class = "hivespace">
         </section>
     
  
