--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
         
         <section class = "featured">
             <h1 class = "featured-text"> Featured </h1>
+            <div class = "featured-img">
             <a href = "project1.html">
             <img src = "2 mcdonalds mockups.png" class = "mcdonalds">
             </a>
+            <a href = "project2.html">
             <img src = "3 hivespace mockups.png" class = "hivespace">
+            </a>
+            </div>
         </section>
     
  
